# Assistent

./: Cargo.toml  README.md  learned_samples.json  windows_setup.md
src/: actions.rs  boost.rs  classifier.rs  extract.rs  gui.rs  intent.rs  learning.rs  main.rs  normalize.rs  parser.rs  similarity.rs  stopwords.rs  vector.rs
src/actions/: files.rs  mod.rs  search.rs  weather.rs
