[package]
name = "Assistent"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

# GUI Dependencies
eframe = "0.28"
egui = "0.28"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "Assistent"
path = "src/main.rs"